wp-content/themes/sixgill/less/desktop_footer.less
/* Footer desktop styles */
.footer {
	height: 146px !important;
}

.footer-top-block {
	height: 36.5%;
}

.footer-top-block {
	border-bottom: 2px solid rgba(131, 131, 131, 0.35);
}

.footer-menu-block {
	border-bottom: 1px solid rgba(131, 131, 131, 0.35);
	height: 34%;
	text-align: left;
}

.footer-top-block-left {
	width: 75%;
	max-width: 650px;
}

.footer-top-block-right {
	/*width: 25%;*/
	width: 180px;
	margin-left: 60px;
}

.footer-top-text {
	font-size: 14px;
	letter-spacing: 0.7px;
	line-height: 3.2;
	font-weight: normal;
	margin-right: 4%;
	max-width: 50%;
}

.footer-subscription-form-wrapper {
	height: 65%;
}

.footer-link-col {
	width: 13.5vw;
}

.footer-link-col:first-child {
	margin-left: 22.7%;
}


.footer-bottom-block {
	height: 29.5%;
}

.footer-social-icon-link {
/*	width: 23%;*/
	width: 35px;
	height: 35px;
}

.footer-social-icon-link:not(:last-child) {
	margin-right: 23px;
}

.footer-icons-wrapper {
	width: 46%;
	min-width: 180px;
}

.footer-copyright-wrapper {
	font-size: 11px;
	font-weight: normal;
	letter-spacing: 0.7px;
}

.footer-subscription-email {
	font-size: 14px;
	letter-spacing: 0.7px;
	padding-left: 12px;
	width: 202px;
	height: 33px;
}

.footer-subscription-button {
	width: 122px;
	height: 33px;
}
.footer-subscribe-error {
    bottom: 33px;
    left: 0;
    &-close {
	  	margin-left: -1px;
  		vertical-align: top;
    }
}

